--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,8 +1,11 @@
 vich_uploader:
     db_driver: orm
 
+    metadata:
+        type: attribute
+
     mappings:
         cars:
             uri_prefix: /images/cars
             upload_destination: '%kernel.project_dir%/public/images/cars'
-            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            namer: App\Naming\CarImageNamer
