--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,12 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    
+    App\Naming\CarImageNamer:
+        public: true
+        tags:
+            - { name: vich_uploader.namer, mapping: car_images }
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
