--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/images/cars/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -18,3 +19,4 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
