--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -4,24 +4,22 @@ monolog:
 
 when@dev:
     monolog:
+        channels: ['doctrine']
         handlers:
             main:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
                 channels: ["!event"]
-            # uncomment to get logging in your browser
-            # you may have to allow bigger header sizes in your Web server configuration
-            #firephp:
-            #    type: firephp
-            #    level: info
-            #chromephp:
-            #    type: chromephp
-            #    level: info
             console:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
+            doctrine:
+                type:  stream
+                path:  '%kernel.logs_dir%/doctrine.log'
+                level: debug
+                channels: ['doctrine']
 
 when@test:
     monolog:
