--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,9 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals:
+        openingHourService: '@App\Service\OpeningHourService'
 
 when@test:
     twig:
         strict_variables: true
+
