MAJ readme and .env for mail service

--- a/.env
+++ b/.env
@@ -34,8 +34,15 @@ APP_SECRET=bc8b2bb384e77a063cfca792d1945163
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-###< symfony/messenger ###
 
-###> symfony/mailer ###
-# MAILER_DSN=null://null
 ###< symfony/mailer ###
+# MAILER_DSN=smtp://USERNAME:PASSWORD@HOST:PORT?encryption=ENCRYPTION_METHOD
+
+### Mail from ###
+# MAIL_FROM_ADDRESS=expedition@exemple.fr
+### Mail to ###
+# MAIL_TO_ADDRESS=contact@exemple.fr
+
+
+### Nom du garage ###
+# GARAGE_NAME="Garage V Parrot"
